# triflow

./: .README.rst  .gitignore  .travis.yml  Dockerfile  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  ROADMAP.md  constraints.txt  doc-requirements.txt  meta.yaml  pylama.ini  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
conda/: spec-file.txt
conda/triflow/: meta.yaml
docs/: .buildinfo  Makefile  contribute.html  cookbook.html  dev_guide.html  displays.html  doc.html  genindex.html  index.html  installation.html  modules.html  objects.inv  overview.html  py-modindex.html  schemes.html  search.html  searchindex.js  triflow.core.html  triflow.html  triflow.plugins.html  user_guide.html
docs/.doctrees/: contribute.doctree  cookbook.doctree  dev_guide.doctree  displays.doctree  doc.doctree  environment.pickle  index.doctree  installation.doctree  modules.doctree  overview.doctree  schemes.doctree  triflow.core.doctree  triflow.doctree  triflow.plugins.doctree  user_guide.doctree
docs/_modules/: index.html
docs/_sources/: contribute.rst.txt  displays.ipynb.txt  displays.rst.txt  doc.rst.txt  index.rst.txt  installation.rst.txt  modules.rst.txt  overview.rst.txt  schemes.rst.txt  triflow.core.rst.txt  triflow.plugins.rst.txt  triflow.rst.txt  user_guide.rst.txt
docs/_static/: documentation_options.js
docs/cookbook/: advection_diffusion.html  burger_equation.html  burger_kdv_equation.html  displays.html  dropplet_spread.html  kuramoto.html  manual_2D_model.html  so_wavy.html  test_dropplet_spread.html  test_kuramoto.html  wave_equation.html  wave_equation_2D.html
docs/doctrees/: environment.pickle  installation.doctree  modules.doctree  overview.doctree  triflow.core.doctree  triflow.doctree  triflow.plugins.doctree
docs/epub/: .buildinfo  content.opf  cookbook.xhtml  genindex.xhtml  index.xhtml  installation.xhtml  modules.xhtml  nav.xhtml  overview.xhtml  py-modindex.xhtml  schemes.xhtml  toc.ncx  triflow.core.xhtml  triflow.epub  triflow.plugins.xhtml  triflow.xhtml
docs/html/: index.html  modules.html  objects.inv  py-modindex.html  search.html  triflow.html  triflow.plugins.html
docs/latex/: triflow.aux  triflow.idx  triflow.ilg  triflow.ind  triflow.out  triflow.tex  triflow.toc
docs/pyplots/: overview_model_hook.py  overview_model_multi_step.py  overview_model_one_step.py  overview_simulation_hook.py
docs/source/: conf.py  cookbook.rst  index.rst  installation.rst  intro.rst  model.rst  modules.rst  overview.rst  schemes.rst  triflow.core.rst  triflow.mdict.rst  triflow.misc.rst  triflow.models.rst  triflow.parametric.rst  triflow.plugins.rst  triflow.plugins.writers.rst  triflow.rst
examples/commented/: advection_diffusion_periodic.py  diffusion_periodic.py  wave_equation.py
examples/commented_py/: advection_diffusion_periodic.py  diffusion_periodic.py
examples/misc/: materials.py
examples/models/: cache_main_models.py  model_4fields.py  model_4fields_simple.py
examples/notebooks/: advection_diffusion.ipynb  burger_equation.ipynb  burger_kdv_equation.ipynb  displays.ipynb  dropplet_spread.ipynb  kuramoto.ipynb  manual_2D_model.ipynb  so_wavy.ipynb  test_api.ipynb  test_dropplet_spread.ipynb  wave_equation.ipynb  wave_equation_2D.ipynb
examples/uncommented_py/: basic_compute.py  benchmark_compute.py  benchmark_compute.py.lprof  cache_models.py  compute_basic.py  local_compute.py  locals_compute.py  make_routine.py  remote_compute.py  remotes_compute.py
source_doc/: Makefile  conftest.py
source_doc/source/: conf.py  contribute.rst  cookbook.rst  dev_guide.rst  doc.rst  index.html  installation.rst  overview.fdb_latexmk  overview.fls  overview.rst  schemes.rst  triflow.plugins.rst  user_guide.rst
template/output_simul/: samples.csv
template/report/: report.tex
template/routines/: analysis.py  distribute_simulations.py  generate_samples.py  project_path.py
test/: test_triflow.py
tests/: test_containers.py  test_displays.py  test_fields.py  test_model.py  test_pickle.py  test_routines.py  test_signals.py  test_simulation.py  test_system.py
triflow/: __init__.py  boundaries.py  displays.py  helpers.py  hooks.py  make_routines.py  misc.py  path_project.py  post_traitement_freq.fdb_latexmk  post_traitement_freq.fls  post_traitement_freq.py  requirements.txt  schemes.py  signal.py  signals.py  simulation.py  solver.py  utils.py  writers.py
triflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
triflow/core/: __init__.py  compilers.py  fields.py  grid_builder.py  make_routines.py  model.py  routines.py  schemes.py  simulation.py  solver.py  spatial_schemes.py  system.py  temporal_schemes.py  variables.py
triflow/mdict/: __init__.py  mdict.py
triflow/misc/: helpers.py  materials.py  misc.py
triflow/models/: boundaries.py  cache_main_models.py  misc.py  model_2fields.py  model_4fields.py  model_4fields_simple.py  model_full_fourrier.py
triflow/parametric/: __init__.py  animate.py  compute.py  sampling.py
triflow/plugins/: container.py  displays.py  hooks.py  schemes.py  signals.py
triflow/triflow_helper/: analyse.py  compute.py  log.py  (+1 more)
(+103 files in other folders)
