[tool.poetry]
name = "triflow"
version = "0.6.0"
description = "Automatic finite difference discretization for 1D PDE with fast temporal solvers."

license = "MIT"

authors = [
    "Nicolas Cellier <contact@nicolas-cellier.net>"
]

readme = 'README.md'  # Markdown files are supported

repository = "http://github.com/locie/triflow"
documentation = "https://locie.github.io/triflow"

keywords = ['PDE', 'finite-difference', 'physic',
            'modelling', 'interactive']

[tool.poetry.dependencies]
python = ">=3.5"

# core computation
numpy = "^1"
scipy = "^1"
sympy = "^1"
theano = "^1"

# pipeline for data and display
streamz = "^0.3"
more-itertools = "^4.2"

# data container
xarray = "^0.10"
dask = "^0.17.2"

# memoization for ndarray input
joblib = "^0.12.0"

# path management
"path.py" = "^11.0"

# iteration display
tqdm = "^4.23"

# better serialization
cloudpickle = "^0.5.2"

# dataclass for python < 3.7
attrs = "^18.1"

# needed for decision-tree building
sklearn = "^0"

# allow dynamic function signature
python-forge = "^18"

# interactive work with jupyter
jupyter = {version = "^1.0", optional = true}
ipywidgets = {version = "^7.2", optional = true}
bokeh = {version = "^0.13.0", optional = true}
holoviews = {version = "^1.10", optional = true}
matplotlib = {version = "^2.2", optional = true}

[tool.poetry.extras]
jupyter = ["jupyter", "ipywidgets", "bokeh", "holoviews"]
display = ["bokeh", "holoviews", "matplotlib"]
all = ["jupyter", "ipywidgets", "bokeh", "holoviews", "matplotlib"]

[tool.poetry.dev-dependencies]
# linting & formatting
pylama = "^7.4"
isort = "^4.3"
black = "^18"

# tests
pytest = "^3.5"

# doc generation
sphinx = "^1.7"
matplotlib = "^2.2"

# coverage
python-coveralls = "^2.9"
pytest-cov = "^2.5"

