[tool.poetry]
name = "triflow"
version = "0.6.0"
description = "Automatic finite difference discretization for 1D PDE with fast temporal solvers."

license = "MIT"

authors = [
    "Nicolas Cellier <contact@nicolas-cellier.net>"
]

readme = 'README.md'

repository = "http://github.com/locie/triflow"
documentation = "https://locie.github.io/triflow"

keywords = ['PDE', 'finite-difference', 'physic',
            'modelling', 'interactive']

[tool.poetry.dependencies]
python = ">=3.5"

# core computation
numpy = "^1"
scipy = "^1"
sympy = "^1.3"
theano = {version = "^1", optional = true}

# pipeline for data and display
streamz = "^0.3"
more-itertools = "^4"

# data container
xarray = "^0.10"
dask = "^0.18"
pyyaml = "^3"

# memoization for ndarray input
joblib = "^0.12"

# path management
"path.py" = "^11"

# iteration display
tqdm = "^4"

# better serialization
cloudpickle = "^0.5.2"

# dataclass for python < 3.7
attrs = "^18.1"

# needed for decision-tree building
sklearn = "^0"

# fields display (and save)
matplotlib = "^3"

# interactive work with jupyter
holoviews = "^1"
jupyter = {version = "^1", optional = true}
ipywidgets = {version = "^7", optional = true}
bokeh = {version = "^0", optional = true}


[tool.poetry.extras]
jupyter = ["jupyter", "ipywidgets", "bokeh"]
theano = ["theano"]

[tool.poetry.dev-dependencies]
# linting & formatting
pylama = "^7"
isort = "^4"
black = "^18"

# tests
pytest = "^3"

# doc generation
sphinx = "*"
matplotlib = "^3"

# coverage
python-coveralls = "^2"
pytest-cov = "^2"
