[tool.poetry]
name = "triflow"
version = "0.6.0"
description = "Automatic finite difference discretization for 1D PDE with fast temporal solvers."

license = "MIT"

authors = [
    "Nicolas Cellier <contact@nicolas-cellier.net>"
]

readme = 'README.md'

repository = "http://github.com/locie/triflow"
documentation = "https://locie.github.io/triflow"

keywords = ['PDE', 'finite-difference', 'physic',
            'modelling', 'interactive']

[tool.poetry.dependencies]
python = ">=3.5"

# core computation
numpy = "^1"
scipy = "^1"
sympy = "^1.3"

# pipeline for data and display
streamz = "^0"
more-itertools = "^4"

# data container
xarray = "^0"
dask = "^0"
pyyaml = "^3"

# memoization for ndarray input
joblib = "^0"

# path management
"path.py" = "^11"

# iteration display
tqdm = "^4"

# better serialization
cloudpickle = "^0"

# dataclass for python < 3.7
attrs = "^18"

# needed for decision-tree building
sklearn = "^0"

# fields display (and save)
matplotlib = "^3"

# interactive work with jupyter
holoviews = "^1"
boltons = "^18"
fuzzywuzzy = "^0.17"
python-Levenshtein = "^0.12"


[tool.poetry.extras]
# jupyter = ["jupyter", "ipywidgets", "bokeh"]
# theano = ["theano"]

[tool.poetry.dev-dependencies]
# linting & formatting
pylama = "*"
isort = "*"

# tests
pytest = "*"

# doc generation
sphinx = "*"
matplotlib = "*"

# coverage
python-coveralls = "*"
pytest-cov = "*"
ipykernel = "*"
