[aliases]
test=pytest

[metadata]
description-file = docs/source/intro.rst

[tool:pytest]
addopts = -v -n 16 --doctest-modules --ignore=setup.py --ignore=docs/* --cov=triflow --pep8 --pylama
pep8maxlinelength = 80
pep8ignore =
    E402    # module level import not at top of file
norecursedirs = .* docs/* tmp*
